fix pom.xml clrf