@@ -1,3 +1,4 @@
+<<<<<<< HEAD
 <?xml version="1.0" encoding="UTF-8" ?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -440,4 +441,448 @@
             </plugin>
 		</plugins>
 	</build>
+=======
+<?xml version="1.0" encoding="UTF-8" ?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.cloudifysource.quality</groupId>
+	<artifactId>Cloudify-iTests</artifactId>
+	<name>Cloudify-iTests</name>
+    <version>3.0.0-SNAPSHOT</version>
+	<description>Cloudiy Testing Framework and tests</description>
+
+    <properties>
+        <cloudify.home>${env.CLOUDIFY_HOME}</cloudify.home>
+        <gsVersion>9.5.0-SNAPSHOT</gsVersion>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <cloudifyVersion>2.5.0-SNAPSHOT</cloudifyVersion>
+        <springVersion>3.1.3.RELEASE</springVersion>
+        <hibernateVersion>3.6.10.Final</hibernateVersion>
+    </properties>
+
+    <repositories>
+        <repository>
+            <id>openspaces</id>
+            <url>http://maven-repository.openspaces.org</url>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>org.openspaces</id>
+            <url>http://maven-repository.openspaces.org</url>
+        </pluginRepository>
+    </pluginRepositories>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-entitymanager</artifactId>
+                <version>${hibernateVersion}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.gigaspaces</groupId>
+			<artifactId>gs-openspaces</artifactId>
+			<version>${gsVersion}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>ant</artifactId>
+					<groupId>ant</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>asm</artifactId>
+					<groupId>asm</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>log4j</artifactId>
+					<groupId>log4j</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.gigaspaces</groupId>
+			<artifactId>gs-runtime</artifactId>
+			<version>${gsVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cloudifysource</groupId>
+			<artifactId>CLI</artifactId>
+			<version>${cloudifyVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cloudifysource</groupId>
+			<artifactId>dsl</artifactId>
+			<version>${cloudifyVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cloudifysource</groupId>
+			<artifactId>esc</artifactId>
+			<version>${cloudifyVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cloudifysource</groupId>
+			<artifactId>USM</artifactId>
+			<version>${cloudifyVersion}</version>
+		</dependency>
+        <dependency>
+			<groupId>com.gigaspaces.quality</groupId>
+			<artifactId>wanem</artifactId>
+			<version>0.0.2-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.httpcomponents</groupId>
+					<artifactId>httpclient</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.httpcomponents</groupId>
+					<artifactId>httpmime</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.gigaspaces.quality</groupId>
+			<artifactId>webuitf</artifactId>
+			<version>1.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.gigaspaces.quality</groupId>
+			<artifactId>DashboardReporter</artifactId>
+			<version>0.0.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.gigaspaces.quality.cloudify.sgtest.apps</groupId>
+			<artifactId>archives</artifactId>
+			<version>3.0.0-SNAPSHOT</version>
+			<type>pom</type>
+		</dependency>
+		<dependency>
+			<groupId>com.gigaspaces.quality.sgtest.apps</groupId>
+			<artifactId>MHEDS-dist</artifactId>
+			<version>3.0.0-SNAPSHOT</version>
+			<type>pom</type>
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jclouds</groupId>
+			<artifactId>jclouds-allcompute</artifactId>
+			<version>1.5.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jclouds</groupId>
+			<artifactId>jclouds-blobstore</artifactId>
+			<version>1.5.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jclouds.provider</groupId>
+			<artifactId>aws-s3</artifactId>
+			<version>1.5.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sun.jersey.contribs</groupId>
+			<artifactId>jersey-apache-client</artifactId>
+			<version>1.11</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hyperic</groupId>
+			<artifactId>sigar</artifactId>
+			<version>1.6.5</version>
+			<scope>system</scope>
+			<systemPath>${cloudify.home}/lib/platform/sigar/sigar.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>org.openspaces.xenserver</groupId>
+			<artifactId>xenserver-machine-provisioning</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.swift.common</groupId>
+			<artifactId>confluence-soap</artifactId>
+			<version>0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+			<version>1.4.2</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>1.8.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jgit</groupId>
+			<artifactId>org.eclipse.jgit</artifactId>
+			<version>2.0.0.201206130900-r</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<exclusions>
+				<exclusion>
+					<artifactId>asm</artifactId>
+					<groupId>asm</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.sshd</groupId>
+			<artifactId>sshd-core</artifactId>
+			<version>0.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.ivy</groupId>
+			<artifactId>ivy</artifactId>
+			<version>2.2.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-json</artifactId>
+			<version>1.16</version>
+		</dependency>
+	</dependencies>
+
+
+	<profiles>
+		<profile>
+			<id>tgrid-cloudify-iTests</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>com.gigaspaces</groupId>
+					<artifactId>gs-openspaces</artifactId>
+					<version>${gsVersion}</version>
+					<scope>system</scope>
+					<systemPath>${cloudify.home}/lib/required/gs-openspaces.jar</systemPath>
+				</dependency>
+				<dependency>
+					<groupId>com.gigaspaces</groupId>
+					<artifactId>gs-runtime</artifactId>
+					<version>${gsVersion}</version>
+					<scope>system</scope>
+					<systemPath>${cloudify.home}/lib/required/gs-runtime.jar</systemPath>
+				</dependency>
+				<dependency>
+					<groupId>org.cloudifysource</groupId>
+					<artifactId>CLI</artifactId>
+					<version>${cloudifyVersion}</version>
+					<scope>system</scope>
+					<systemPath>${cloudify.home}/tools/cli/cli.jar</systemPath>
+				</dependency>
+				<dependency>
+					<groupId>org.cloudifysource</groupId>
+					<artifactId>dsl</artifactId>
+					<version>${cloudifyVersion}</version>
+					<scope>system</scope>
+					<systemPath>${cloudify.home}/lib/platform/cloudify/dsl.jar</systemPath>
+				</dependency>
+				<dependency>
+					<groupId>org.cloudifysource</groupId>
+					<artifactId>esc</artifactId>
+					<version>${cloudifyVersion}</version>
+					<scope>system</scope>
+					<systemPath>${cloudify.home}/lib/platform/esm/esc-${cloudifyVersion}.jar</systemPath>
+				</dependency>
+				<dependency>
+					<groupId>org.cloudifysource</groupId>
+					<artifactId>USM</artifactId>
+					<version>${cloudifyVersion}</version>
+					<scope>system</scope>
+					<systemPath>${cloudify.home}/lib/platform/usm/usm.jar</systemPath>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>quickbuild-compile</id>
+			<dependencies>
+				<dependency>
+					<groupId>org.hyperic</groupId>
+					<artifactId>sigar</artifactId>
+					<version>1.6.5</version>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
+
+	<build>
+		<testSourceDirectory>src/main/java</testSourceDirectory>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.13</version>
+				<configuration>
+					<classpathDependencyExcludes>
+						<classpathDependencyScopeExclude>runtime</classpathDependencyScopeExclude>
+					</classpathDependencyExcludes>
+					<argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
+					<includes>
+						<include>${includes}</include>
+					</includes>
+					<excludes>
+						<exclude>${excludes}</exclude>
+					</excludes>
+					<disableXmlReport>true</disableXmlReport>
+					<reportsDirectory>${sgtest.summary.dir}</reportsDirectory>
+					<reportFormat>brief</reportFormat>
+					<useFile>false</useFile>
+					<properties>
+						<property>
+							<name>configfailurepolicy</name>
+							<value>continue</value>
+						</property>
+						<property>
+							<name>suitename</name>
+							<value>${sgtest.suiteName}${sgtest.suiteId}</value>
+						</property>
+						<property>
+							<name>testname</name>
+							<value>${sgtest.suiteName}${sgtest.suiteId}</value>
+						</property>
+						<property>
+							<name>outputDir</name>
+							<value>${sgtest.summary.dir}</value>
+						</property>
+						<property>
+							<name>listener</name>
+							<value>org.cloudifysource.quality.iTests.org.cloudifysource.quality.iTests.frameorg.cloudifysource.quality.iTests.frameworkng.SGTestNGListener,framework.testng.SGTestNgSuiteSplitter,framework.testng.report.TestNgReporterImpl</value>
+						</property>
+					</properties>
+					<systemProperties>
+						<sgtest.buildNumber>${sgtest.buildNumber}</sgtest.buildNumber>
+						<sgtest.suiteId>${sgtest.suiteId}</sgtest.suiteId>
+						<sgtest.numOfSuites>${sgtest.numOfSuites}</sgtest.numOfSuites>
+						<selenium.browser>${selenium.browser}</selenium.browser>
+						<org.apache.commons.logging.Log>org.apache.commons.logging.impl.Jdk14Logger</org.apache.commons.logging.Log>
+						<com.gs.logging.level.config>true</com.gs.logging.level.config>
+						<java.util.logging.config.file>${basedir}/src/config/sgtest_logging.properties</java.util.logging.config.file>
+						<sgtest.buildFolder>${sgtest.buildFolder}</sgtest.buildFolder>
+						<sgtest.url>http://192.168.9.121:8087/sgtest3.0-cloudify/</sgtest.url>
+						<com.gs.work>${com.gs.work}</com.gs.work>
+						<com.gs.deploy>${com.gs.deploy}"</com.gs.deploy>
+						<ec2.region>${ec2.region}</ec2.region>
+						<ipList>${ipList}</ipList>
+						<supported-clouds>${supported-clouds}</supported-clouds>
+					</systemProperties>
+					<testFailureIgnore>true</testFailureIgnore>
+					<detail>true</detail>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.3</version>
+				<configuration>
+					<descriptors>
+						<descriptor>src/main/assembly/assembly.xml</descriptor>
+					</descriptors>
+					<appendAssemblyId>false</appendAssemblyId>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id> <!-- this is used for inheritance merges -->
+						<phase>package</phase> <!-- bind to the packaging phase -->
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-scm-plugin</artifactId>
+                <version>1.8.1</version>
+                <configuration>
+                    <username>${svn-user}</username>
+                    <password>${svn-password}</password>
+                    <connectionUrl>scm:svn:svn://svn-srv/SVN/cloudify/trunk/quality/frameworks/SGTest-credentials</connectionUrl>
+                    <exportDirectory>${basedir}/src/main/resources/credentials</exportDirectory>
+                    <providerImplementations>
+                        <svn>javasvn</svn>
+                    </providerImplementations>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.google.code.maven-scm-provider-svnjava</groupId>
+                        <artifactId>maven-scm-provider-svnjava</artifactId>
+                        <version>2.0.5</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <createChecksum>true</createChecksum>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.cloudifysource</groupId>
+                <artifactId>s3client-maven-plugin</artifactId>
+                <version>1.3</version>
+                <configuration>
+                    <user>${user}</user>
+                    <key>${key}</key>
+                    <container>${container}</container>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>s3client</id>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                        <phase>deploy</phase>
+                    </execution>
+                </executions>
+            </plugin>
+		</plugins>
+	</build>
+>>>>>>> fix pom.xml clrf
 </project>
